updated bash scripts, Updater, and some component for the menubar